--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,13 @@ services:
       - "3000:3000"
     environment:
       - PORT=3000
+  mongo:
+    image: mongo
+    environment:
+      - MONGO_INIT_DB_ROOT_USERNAME=admin
+      - MONGO_INIT_DB_ROOT_PASSWORD=testtest
+    volumes:
+      - mongo-db:/data/db
+
+volumes:
+  mongo-db:
