--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -12,6 +12,7 @@ services:
       - NODE_ENV=development
       - MONGO_USER=admin
       - MONGO_PASSWORD=testtest
+      - SESSION_SECRET=secret
     command: npm run dev
 
   mongo:
