--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^6.1.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^6.7.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "redis": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
